tests/integration/snapshots/integration__commands__check__closed_curly.snap
---
source: tests/integration/commands/check.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---
}
stdout ---

stderr ---
error: expected json value, found `}`
 --> stdin:1:1
  |
1 | }
  | ^
  |
help: consider adding the missing open curly brace
  |
1 | {}
  | +
