tests/integration/snapshots/integration__commands__check__exponent_missing_digits_after_sign.snap
---
source: tests/integration/commands/check.rs
expression: output.snapshot_display()
---
args: ["check"]
status: 1
success: false
stdin ---
98e+
stdout ---

stderr ---
error: expected digit after exponent indicator, found no significant characters
 --> stdin:1:4
  |
1 | 98e+
  |   -^
  |   |
  |   exponent found here
  |
help: remove the exponent
  |
1 - 98e+
1 + 98
  |
help: insert a placeholder digit
  |
1 | 98e+5
  |     +
